# compta-automation

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: .gitignore  clorian.py  contstants.py  email_sender.py  main.py  shopify.py  skidata.py  stripe.py
