[tool.poetry]
name = "luma-compta-automation"
version = "0.1.0"
description = ""
authors = ["Colin Heurteaux <cheurteaux@luma-arles.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
