[tool.poetry]
name = "luma-compta-automation"
version = "0.1.0"
description = ""
authors = ["Oumorou ZIBO <ozibo@luma-arles.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
paramiko = "^3.4.0"
pandas = "^2.2.0"
openpyxl = "^3.1.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"